# Masterarbeit

./: README.md
HyperPersonalisation/: README.md  data.py  metrics.py  pyproject.toml  requirements.txt  trainer.py  training_args.py  utils.py
HyperPersonalisation/configs/: hyperpersonalisation_depression_tests.json  hyperpersonalisation_depression_tests_embeddings.json  hyperpersonalisation_depression_tests_embeddings_nt.json  hyperpersonalisation_depression_tests_nt.json  hyperpersonalisation_embeddings.json  hyperpersonalisation_nt.json  hyperpersonalisation_wav2vec.json
HyperPersonalisation/configs/old/: hyperpersonalisation_all_with_nt.json  hyperpersonalisation_nt.json  hyperpersonalisation_reapprasial_all.json  hyperpersonalisation_reapprasial_embedding.json  hyperpersonalisation_reapprasial_meta.json  hyperpersonalisation_reapprasial_meta_nt.json  hyperpersonalisation_reapprasial_nt.json  (+1 more)
HyperPersonalisation/hyperformer/: adapters.py  multitask_sampler.py
HyperPersonalisation/scripts/: hyperpersonalisation.sh  wav2vec.sh
SpeechFormer++/: README.md  pyproject.toml  train_model.py
SpeechFormer++/adapter/: adapters.py  hypernets.py
SpeechFormer++/config/: __init__.py  adapter_config.json  config.py  ema_feature_config.json  feedback_experiment_feature_config.json  model_config.json  train_SpeechFormer_v2.json
SpeechFormer++/extract_feature/: extract_hubert.py  extract_wav2vec2.py
SpeechFormer++/model/: speechformer_v2.py
SpeechFormer++/module/: speechformer_layer.py  speechformer_v2_layer.py
SpeechFormer++/utils/: dataset_lmdb.py  lmdb_kit.py  model.py  recoder.py  toolbox.py  write_result.py
(+14 files in other folders)
