[tool.poetry]
name = "devenv"
version = "0.1.0"
description = "Python+poetry shell via devenv"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
lmdb = "^1.4.1"
torch = "2.0.0"
llvmlite = "^0.40.1"
numba = "^0.57.1"
librosa = "^0.10.1"
matplotlib = "^3.8.0"
numpy = "1.24.4"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
scipy = "^1.11.2"
soundfile = "^0.12.1"
tqdm = "^4.66.1"
yacs = "^0.1.8"
fairseq = "^0.12.2"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.15.1"
transformers = "^4.36.2"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


